<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mediapickersample.SelectMediaFragment">

    <TextView
        android:id="@+id/selectedTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/selected"
        android:textColor="#180E19"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedCountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:textColor="#180E19"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/selectedTitleTv"
        app:layout_constraintTop_toTopOf="@id/selectedTitleTv" />

    <ImageView
        android:id="@+id/noSelectImageIv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/select_image"
        app:layout_constraintBottom_toTopOf="@id/noSelectTitleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/noSelectTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_select_images"
        android:textColor="@color/colorDarkGrey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/noSelectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noSelectTitleTv" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/noItemSelectedGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="noSelectBtn,noSelectTitleTv,noSelectImageIv" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectionButtonLv"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <Button
        android:id="@+id/selectImageBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/image"
        app:layout_constraintBottom_toTopOf="@id/selectMultipleImagesBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/selectVideoBtn"/>
    <Button
        android:id="@+id/selectVideoBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="5dp"
        android:text="@string/video"
        app:layout_constraintBottom_toTopOf="@id/selectMultipleVideosBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selectImageBtn"/>
    <Button
        android:id="@+id/selectMultipleImagesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/multiple_images"
        app:layout_constraintBottom_toTopOf="@id/selectOvalImagesBtn"
        app:layout_constraintEnd_toStartOf="@id/selectMultipleVideosBtn"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/selectMultipleVideosBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_marginStart="5dp"
        android:text="@string/multiple_videos"
        app:layout_constraintBottom_toTopOf="@id/selectRectImageBtn"
        app:layout_constraintStart_toEndOf="@id/selectMultipleImagesBtn"
        app:layout_constraintEnd_toEndOf="parent" />
        <Button
            android:id="@+id/selectBothImagesVideos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/select_both_images_and_videos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/selectOvalImagesBtn"
            app:layout_constraintEnd_toEndOf="@id/selectRectImageBtn" />
        <Button
            android:id="@+id/selectOvalImagesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/oval_cropped_image"
            app:layout_constraintBottom_toTopOf="@id/selectBothImagesVideos"
            app:layout_constraintEnd_toStartOf="@id/selectRectImageBtn"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/selectRectImageBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/rectangle_cropped_image"
            app:layout_constraintBottom_toTopOf="@id/selectBothImagesVideos"
            app:layout_constraintStart_toEndOf="@id/selectOvalImagesBtn"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:id="@+id/scrollView"
        app:layout_constraintBottom_toTopOf="@id/selectionButtonLv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedTitleTv">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        tools:itemCount="5"
        tools:listitem="@layout/list_item_layout" />
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/itemSelectedGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="scrollView,selectionButtonLv,selectedTitleTv,selectedCountTv" />
</androidx.constraintlayout.widget.ConstraintLayout>